--- a/catalog.html
+++ b/catalog.html
@@ -10,41 +10,39 @@
   </head>
   <body>
     <div class="page-wrapper">
-      <header class="page-header">
-        <div class="content-container header-container">
-          <a class="logo-header" href="index.html">
-            <img src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
+      <header class="content-container page-header">
+        <a class="logo-header" href="index.html">
+          <img src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
+        </a>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <a class="navigation-link navigation-icon-link icon" href="#">
+            <svg aria-hidden="true" focusable="false" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.1585 18.05L15.448 14.35C16.4508 13.05 17.1528 11.35 17.1528 9.44995C17.1528 5.04995 13.5426 1.44995 9.13013 1.44995C4.71764 1.44995 1.10742 5.14995 1.10742 9.54995C1.10742 13.95 4.71764 17.55 9.13013 17.55C10.9352 17.55 12.6401 16.95 14.044 15.85L17.7545 19.55L19.1585 18.05ZM9.13013 15.55C5.82076 15.55 3.1131 12.85 3.1131 9.54995C3.1131 6.24995 5.82076 3.54995 9.13013 3.54995C12.4395 3.54995 15.1472 6.24995 15.1472 9.54995C15.1472 12.85 12.4395 15.55 9.13013 15.55Z"/>
+            </svg>
+            <span class="visually-hidden">Поиск</span>
           </a>
-          <nav class="navigation">
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link" href="index.html">Главная</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">О Седоне</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link  navigation-link-current" href="catalog.html">Гостиницы</a>
-              </li>
-            </ul>
-            <a class="navigation-link navigation-icon-link icon" href="#">
-              <svg aria-hidden="true" focusable="false" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-                <path d="M19.1585 18.05L15.448 14.35C16.4508 13.05 17.1528 11.35 17.1528 9.44995C17.1528 5.04995 13.5426 1.44995 9.13013 1.44995C4.71764 1.44995 1.10742 5.14995 1.10742 9.54995C1.10742 13.95 4.71764 17.55 9.13013 17.55C10.9352 17.55 12.6401 16.95 14.044 15.85L17.7545 19.55L19.1585 18.05ZM9.13013 15.55C5.82076 15.55 3.1131 12.85 3.1131 9.54995C3.1131 6.24995 5.82076 3.54995 9.13013 3.54995C12.4395 3.54995 15.1472 6.24995 15.1472 9.54995C15.1472 12.85 12.4395 15.55 9.13013 15.55Z"/>
-              </svg>
-              <span class="visually-hidden">Поиск</span>
-            </a>
-            <a class="navigation-link navigation-icon-link icon" href="#">
-              <svg aria-hidden="true" focusable="false" width="20" height="17" xmlns="http://www.w3.org/2000/svg">
-                <path d="M10.5766 17C10.2758 17 9.97493 16.9 9.77436 16.6C4.35903 10.5 3.05534 9.1 2.75449 8.7C2.0525 7.8 1.65137 6.6 1.65137 5.4C1.65137 2.4 4.05818 0 7.16698 0C8.47067 0 9.67407 0.5 10.6769 1.3C11.6797 0.5 12.9834 0 14.1868 0C17.1954 0 19.7025 2.4 19.7025 5.4C19.7025 6.7 19.201 7.9 18.3988 8.8L11.3789 16.7C11.1783 16.9 10.9778 17 10.5766 17ZM4.5596 7.5C4.86045 7.9 8.06953 11.5 10.6769 14.4L16.8945 7.4C17.3959 6.9 17.5965 6.2 17.5965 5.4C17.5965 3.6 16.0922 2.1 14.2871 2.1C13.2843 2.1 12.2815 2.6 11.5795 3.4C11.2786 3.7 10.9778 3.8 10.6769 3.8C10.3761 3.8 10.0752 3.6 9.87464 3.4C9.17265 2.6 8.16982 2.1 7.16698 2.1C5.36187 2.1 3.85761 3.6 3.85761 5.4C3.75733 6.3 4.15846 7 4.5596 7.5C4.45931 7.5 4.45931 7.5 4.5596 7.5Z"/>
-              </svg>
-              <span class="visually-hidden">Избранное</span>
-              <div class="favorites-count-circle">
-                <span class="favorites-count">12</span>
-              </div>
-            </a>
-            <a class="button header-button" href="#">Хочу сюда!</a>
-          </nav>
-        </div>
+          <a class="navigation-link navigation-icon-link icon" href="#">
+            <svg aria-hidden="true" focusable="false" width="20" height="17" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.5766 17C10.2758 17 9.97493 16.9 9.77436 16.6C4.35903 10.5 3.05534 9.1 2.75449 8.7C2.0525 7.8 1.65137 6.6 1.65137 5.4C1.65137 2.4 4.05818 0 7.16698 0C8.47067 0 9.67407 0.5 10.6769 1.3C11.6797 0.5 12.9834 0 14.1868 0C17.1954 0 19.7025 2.4 19.7025 5.4C19.7025 6.7 19.201 7.9 18.3988 8.8L11.3789 16.7C11.1783 16.9 10.9778 17 10.5766 17ZM4.5596 7.5C4.86045 7.9 8.06953 11.5 10.6769 14.4L16.8945 7.4C17.3959 6.9 17.5965 6.2 17.5965 5.4C17.5965 3.6 16.0922 2.1 14.2871 2.1C13.2843 2.1 12.2815 2.6 11.5795 3.4C11.2786 3.7 10.9778 3.8 10.6769 3.8C10.3761 3.8 10.0752 3.6 9.87464 3.4C9.17265 2.6 8.16982 2.1 7.16698 2.1C5.36187 2.1 3.85761 3.6 3.85761 5.4C3.75733 6.3 4.15846 7 4.5596 7.5C4.45931 7.5 4.45931 7.5 4.5596 7.5Z"/>
+            </svg>
+            <span class="visually-hidden">Избранное</span>
+            <div class="favorites-count-circle">
+              <span class="favorites-count">12</span>
+            </div>
+          </a>
+          <a class="button header-button" href="#">Хочу сюда!</a>
+        </nav>
       </header>
       <main class="catalog main-container">
         <div class="filter-section">
@@ -184,7 +182,9 @@
           <div class="hotel-card-container">
             <article class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Каньон и звездное небо.">
+                <div class="hotel-card-image-container">
+                  <img class="hotel-card-image" src="images/hotels/hotel-1.jpg" alt="Каньон и звездное небо.">
+                </div>
                 <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
               <div class="hotel-card-info">
@@ -200,7 +200,9 @@
             </article>
             <article class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/hotels/hotel-2.jpg" width="300" height="211" alt="Каньон на горизонте, облачное небо и радуга.">
+                <div class="hotel-card-image-container">
+                  <img class="hotel-card-image" src="images/hotels/hotel-2.jpg" width="300" height="211" alt="Каньон на горизонте, облачное небо и радуга.">
+                </div>
                 <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
               <div class="hotel-card-info">
@@ -216,7 +218,9 @@
             </article>
             <article class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/hotels/hotel-3.jpg" width="300" height="211" alt="Каньон на фоне ясного неба.">
+                <div class="hotel-card-image-container">
+                  <img class="hotel-card-image" src="images/hotels/hotel-3.jpg" width="300" height="211" alt="Каньон на фоне ясного неба.">
+                </div>
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
               <div class="hotel-card-info">
@@ -232,7 +236,9 @@
             </article>
             <article class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/hotels/hotel-4.jpg" width="300" height="211" alt="Каньон на горизонте на фоне звездного неба.">
+                <div class="hotel-card-image-container">
+                  <img class="hotel-card-image" src="images/hotels/hotel-4.jpg" width="300" height="211" alt="Каньон на горизонте на фоне звездного неба.">
+                </div>
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
               <div class="hotel-card-info">
